--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,6 @@
   flex-direction: column;
 }
 
-.flex-row {
-  display: flex;
-  height: 100%;
-}
-
 .logo {
   width: 228px;
   height: 32px;
@@ -25,6 +20,49 @@
 
 .link {
   color: #2f80ed;
+}
+
+.title {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.subtitle {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 400;
+  margin: 20px auto 0;
+}
+
+/* Table */
+
+.table {
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__cell {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.table__heading {
+  margin: 0 auto 0 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text {
+  margin: 0 auto 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 /* Text */
@@ -98,6 +136,14 @@
   right: 0;
 }
 
+/* Content (не совсем понимаю смысл этого блока кроме семантики) */
+
+.content {
+  display: flex;
+  flex-direction: column;
+  /* Можно и без того что сверху */
+}
+
 /* Description */
 
 .description {
@@ -134,6 +180,20 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: 600;
+}
+
+/* Digits */
+
+.digits {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.digits__cell {
+  width: 250px;
+  margin-top: 60px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
