--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@
   width: 730px;
   line-height: 96px;
   font-size: 102px;
-  font-weight: 600px;
+  font-weight: 600;
 }
 
 .header__subtitle {
@@ -255,6 +255,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 
 .kaufman__title_theme_dark {
@@ -276,4 +277,57 @@
   z-index: 0;
   width: 877px;
   height: 877px;
+}
+
+/* Footer */
+
+.footer {
+  background-color: #1f1f1f;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  min-height: 350px;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+}
+
+.footer__column_copyright {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+/* Не вижу смысла в footer__author */
+
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+}
+
+.footer__social {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.footer__column-links {
+  color: #fff;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
 }
