--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -4,4 +4,9 @@
   font-size: 18px;
   font-weight: 400;
   text-decoration: none;
+  transition: opacity 0.4s ease;
+}
+
+.footer__column-link:hover {
+  opacity: 0.4;
 }
