--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,4 +2,9 @@
   position: relative;
   color: #2f80ed;
   text-decoration: none;
+  transition: opacity 0.4s ease;
+}
+
+.header__link:hover {
+  opacity: 0.4;
 }
