--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,5 @@
 .kaufman__triangle {
-  background-image: url(../../../images/kaufman-triangle.svg);
+  background: url(../../../images/kaufman-triangle.svg) 0 0 / contain;
   position: absolute;
   top: 0;
   right: -210px;
