--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,9 @@
 /* Video */
 @import url(../blocks/video/video.css);
 @import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
+/* Oakley */
+@import url(../blocks/oakley/oakley.css);
 /* Digits */
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/section-title/section-title.css);
