--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
   height: 890px;
-  margin-top: 100px;
+  padding-top: 100px;
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
