--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,4 +1,6 @@
 .cards__item {
+  width: 100%;
+  max-width: 240px;
   padding-top: 60px;
   margin-right: 100px;
   display: flex;
@@ -6,6 +8,6 @@
   align-items: center;
 }
 
-.cards__item:nth-child(3) {
+.cards__item.cards__item:nth-child(3n) {
   margin-right: 0;
 }
