--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,9 +1,14 @@
 .feynman {
-  height: 890px;
+  box-sizing: border-box;
+  min-height: 890px;
   padding-top: 100px;
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+  background-image: url(../../images/feynman.png);
+  background-position: bottom 0 left 0;
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
 }
