--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,7 @@
 /* Vendor */
 @import url(../vendor/normalize.css);
 /* Root */
-@import url(../blocks/root/root.css);
+@import url(../blocks/page/page.css);
 /* Header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/logo.css);
@@ -9,7 +9,6 @@
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__link/header__link.css);
-@import url(../blocks/header/__arrow/header__arrow.css);
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 /* Animation */
 @import url(../blocks/rotation/rotation.css);
@@ -50,8 +49,6 @@
 @import url(../blocks/feynman/__title/feynman__title.css);
 @import url(../blocks/feynman/__subtitle/feynman__subtitle.css);
 @import url(../blocks/feynman/__link/feynman__link.css);
-@import url(../blocks/feynman/__arrow/feynman__arrow.css);
-@import url(../blocks/feynman/__image/feynman__image.css);
 /* Khan */
 @import url(../blocks/khan/khan.css);
 @import url(../blocks/khan/__container/khan__container.css);
@@ -62,7 +59,6 @@
 @import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
 @import url(../blocks/khan/__book-container/khan__book-container.css);
 @import url(../blocks/khan/__buy-link/khan__buy-link.css);
-@import url(../blocks/khan/__arrow/khan__arrow.css);
 /* Kaufman */
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/section-title/_theme/section-title_theme_dark.css);
@@ -75,7 +71,8 @@
 /* Resources */
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
-@import url(../blocks/resources/__link/resourcs__link.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
+@import url(../blocks/resources/__link/resources__link.css);
 /* Footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
@@ -84,5 +81,6 @@
 @import url(../blocks/footer/__column/_content/footer__column_content_social.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-links/footer__column-links.css);
 @import url(../blocks/footer/__column-link/footer__column-link.css);
-@import url(../blocks/footer/__social-icon/footer__siocial-icon.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
